--- a/GPTBenchmarks/Ressources/Benchmarks/benchs.yaml
+++ b/GPTBenchmarks/Ressources/Benchmarks/benchs.yaml
@@ -2,6 +2,12 @@ parameters:
   - prompt: "Change the color of the eyes of the dog described by this tikz file in red"
     tikz: "../Ressources/Tikz/onlydog.tex"
     perf_tikz: "../Ressources/Tikz/onlydog_modified.tex"
-  - prompt: "Change the color of the eyes of the dog described by this tikz file in red"
+  - prompt: "Change the color of the nose and mouth of the dog described by this tikz file in blue"
     tikz: "../Ressources/Tikz/onlydog.tex"
-    perf_tikz: "../Ressources/Tikz/onlydog_modified.tex"
+    perf_tikz: "../Ressources/Tikz/onlydogblue.tex"
+  - prompt: "Change the color of the skin of the squid described by this tikz file in yellow"
+    tikz : "../Ressources/Tikz/onlysquid.tex"
+    perf_tikz: "../Ressources/Tikz/onlysquidyellow.tex"
+  - prompt : "Remove the mouth of the squid described by this tikz file"
+    tikz : "../Ressources/Tikz/onlysquid.tex"
+    perf_tikz: "../Ressources/Tikz/onlysquidwithoutmouth.tex"
