New benchmark added in benchs.yaml

--- a/GPTBenchmarks/Ressources/Benchmarks/benchs.yaml
+++ b/GPTBenchmarks/Ressources/Benchmarks/benchs.yaml
@@ -11,3 +11,6 @@ parameters:
   - prompt : "Remove the mouth of the squid described by this tikz file"
     tikz : "../Ressources/Tikz/onlysquid.tex"
     perf_tikz: "../Ressources/Tikz/onlysquidwithoutmouth.tex"
+  - prompt : "Remove the tongue of the dog described by this tikz file"
+    tikz : "../Ressources/Tikz/onlydog.tex"
+    perf_tikz: "../Ressources/Tikz/onlydogwithouttongue.tex"
